K8s/backend-deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  # namespace: default # Replace with your namespace
  labels:
    app: backend
spec:
  replicas: 2 # Adjust as needed
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: 17rj/backend-restaurant-mern # Replace with your backend image
          ports:
            - containerPort: 5000 # Your backend server port
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  # namespace: <your-namespace> # Replace with your namespace
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP # Accessible only within the cluster
