K8s/db-ds.yml
# 1. StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: mongo-headless     
  replicas: 3                    
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
      storageClassName: gp3  

---
# 2. Headless Service
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
spec:
  clusterIP: None                 
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017

---
# 3.
apiVersion: v1
kind: Service
metadata:
  name: mongo-service           
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
